created pom.xml file